--- a/docs/public/css/_profile.sass
+++ b/docs/public/css/_profile.sass
@@ -9,6 +9,8 @@
   background-color: $primary-color
   margin: 20px auto
   position: relative
+  margin-top: 70px
+  z-index: -1
 
 
 .user-profile-img
